--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,30 @@
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# production
+/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
 # Logs
 logs
 *.log
-npm-debug.log*
 
 # Dependency directory
 node_modules
@@ -10,6 +33,9 @@ node_modules
 .npm
 
 # Optional REPL history
+.idea
 .vscode
+
+build
 
 .env
