--- a/package.json
+++ b/package.json
@@ -1,47 +1,34 @@
 {
-  "name": "movies-explorer-api",
-  "version": "0.0.1",
-  "description": "",
-  "main": "index.js",
+  "name": "movies",
+  "version": "1.0.0",
+  "description": "[![Tests](../../actions/workflows/tests-13-sprint.yml/badge.svg)](../../actions/workflows/tests-13-sprint.yml) [![Tests](../../actions/workflows/tests-14-sprint.yml/badge.svg)](../../actions/workflows/tests-14-sprint.yml)\r # Проект Mesto фронтенд + бэкенд",
+  "main": "app.js",
   "scripts": {
-    "start": "node app.js",
-    "lint": "npx eslint .",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon -r dotenv/config app.js dotenv_config_path=.env.development"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/egorova96/movies-explorer-api.git"
+    "lint": "npx eslint .",
+    "start": "node app.js",
+    "dev": "nodemon app.js"
   },
   "author": "Alena Egorova",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/egorova96/movies-explorer-api/issues"
+  "devDependencies": {
+    "eslint": "^8.42.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.27.5",
+    "nodemon": "^2.0.22"
   },
-  "homepage": "https://github.com/egorova96/movies-explorer-api#readme",
   "dependencies": {
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "celebrate": "^15.0.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "eslint": "^8.48.0",
     "express": "^4.18.2",
-    "express-rate-limit": "^6.10.0",
+    "express-rate-limit": "^6.7.1",
     "express-winston": "^4.2.0",
     "helmet": "^7.0.0",
-    "joi": "^17.10.1",
-    "jsonwebtoken": "^9.0.2",
-    "middlewares": "^0.1.1",
-    "mongoose": "^7.5.0",
-    "routes": "^2.1.0",
-    "validator": "^13.11.0",
-    "winston": "^3.10.0"
-  },
-  "keywords": [],
-  "devDependencies": {
-    "eslint": "^8.48.0",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.28.1",
-    "nodemon": "^3.0.1"
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^7.2.4",
+    "validator": "^13.9.0",
+    "winston": "^3.9.0"
   }
 }
